--- a/src/main/resources/static/client/index/index.css
+++ b/src/main/resources/static/client/index/index.css
@@ -282,7 +282,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('images/view5.jpg') repeat;
+    background: url('../../images/view5.jpg') repeat;
     opacity: 0.05;
     z-index: 0;
 }
@@ -460,7 +460,7 @@
 }
 
 .cta-section {
-    background: linear-gradient(rgba(40, 54, 24, 0.9), rgba(40, 54, 24, 0.9)), url('images/view5.jpg');
+    background: linear-gradient(rgba(40, 54, 24, 0.9), rgba(40, 54, 24, 0.9)), url('../../images/view5.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
